# agent_framework

./: README.md  consolidated_project.txt  learn_api.py  pyproject.toml  run_graph.py  testing.py
.agent/: last.patch  prd.json  tasks.json
dev/: get_code_for_llm.py
src/minimal_agent_framework/: Graph.py  __init__.py  ctx.py  graph.py  maf_tools.py  node.py  prompts.py  tool.py  utils.py
tests/: test_graph.py
